--- a/package.json
+++ b/package.json
@@ -2,16 +2,23 @@
   "name": "blog",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "8.11.3",
+    "npm": "6.4.1"
+  },
   "dependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-infinite-scroller": "^1.2.4",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "yarn build && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
